--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <h1>Um Fim para um Novo Começo</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"> Hilquias</a></p>
     </header>
 
     <section class="normal">
@@ -98,7 +98,7 @@
     </section>
 
 <footer>
-    <p>Site criado por <a href="#">Hilquias</a> para o <a href="#">Cursoemvídeo</a></p>
+    <p> <a href="#">Recording our Life</a></p>
 </footer>
 </body>
 </html>
