--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
 <footer>
-    <p> <a href="#">Recording our Life</a></p>
+    <p> <a href="index2.html">Recording our Life</a></p>
 </footer>
 </body>
 </html>
