--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DVídeo</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo/style2.css">
+    <title>Projetos Redes Sociais</title>
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <!-- Um name para a gente poder carregar coisas dentro dela -->
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                Infelizmente o seu navegador não é compatível...
+            </iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+        </section>
+    </main>
 </body>
 </html>
