--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style2.css">
-    <title>Projetos Redes Sociais</title>
+    <title>Celular</title>
 </head>
 <body>
     <main>
