--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
-    <title>Cordel Moderno</title>
+    <title>Poema</title>
 </head>
 <body>
     <header>
@@ -15,86 +15,63 @@
 
     <section class="normal">
         <p>
-            Estou ficando cansado <br>
-            Da tal tecnologia <br>
-            Só se fala por e-mail <br>
-            Mensagem curta e fria <br>
-            Twitter e Facebook <br>
-            Antes que eu caduque <br>
-            Vou dizer tudo em poesia.
+            O fim, uma palavra pragmática. <br>
+            Que independe de cada perspectiva, <br>
+            E sempre está em constante retrospectiva <br>
+            Porém ninguém sabe o futuro... <br>
+            Desse mundo injusto e obscuro... <br>
+            Sendo assim uma vida, emblemática.
         </p>
     </section>
 
 
     <section class="imagem" id="img01">
         <p>
-            Não é mais como era antes <br>
-            É tudo abreviado <br>
-            "Você" só tem duas letras <br>
-            O "O" e o "E" foi riscado <br>
-            Para declarar o amor <br>
-            Basta botar uma flor <br>
-            E um coração desenhado.
+            Viver o presente, <br>
+            Aprender com passado, <br>
+            Supor o futuro, <br>
+            Apreciar Lembranças, <br>
+            Ter Esperanças, <br>
+            Admirar Amores, <br>
+            E sentir belas flores.
+
         </p>
     </section>
 
 
     <section class="normal">
         <p>
-            Arroba agora não pesa <br>
-            É parte de um endereço <br>
-            Ponto final nem se usa <br>
-            Ou vai até no começo <br>
-            Agora é .com <br>
-            Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Nada é ao acaso. <br>
+            Tudo tem um propósito. <br>
+            Você na minha vida, <br>
+            Minha mente, requisito. <br>
+            Agora comovida, <br>
+            Vou ver como você ficou.
         </p>    
 
-        <p>    
-            Pra piorar a liguagem <br>
-            O emoticom é um risco <br>
-            Tem símbolo para tudo <br>
-            Ponto e vírgula e um asterisco <br>
-            Um beijo significa <br>
-            Pra entender como fica <br>
-            Decifre esse rabisco.
-        </p>
     </section>
 
 
     <section class="imagem" id="img02">
         <p>
-            Tenho saudade das cartas <br>
-            Escritas com a própria mão <br>
-            Mandava no mês de Junho <br>
-            Só chegava no Verão <br>
-            Mas matava a saudade <br>
-            Era texto de verdade <br>
-            Nas linhas do coração.
+            Com o poema chegando ao fim, <br>
+            Não há nada melhor do que falar do começo, <br>
+            Pois a cada sorriso há um novo recomeço. <br>
+            Portanto desistir não é uma opção, <br>
+            Indo além uma apercepção, <br>
+            com o senhor e a senhorita não muda a resolução.
         </p>
     </section>
 
 
     <section class="normal">
         <p>
-            Agora, escrevo e envio <br>
-            Chegando na mesma hora <br>
-            Mas quando vou prosear <br>
-            A pessoa foi embora <br>
-            Abriu outro aplicativo <br>
-            O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            A distância faz ao amor aquilo que o vento faz ao fogo: apaga o pequeno, inflama o grande. <br>
+            <br>
+
+            Roger Bussy-Rabutin
         </p>
 
-        <p>
-            Felizmente, pra orar <br>
-            Não precisa de internet <br>
-            Deus escuta todo mundo <br>
-            Se quiser, faça esse teste <br>
-            Dois pontos são dois joelhos <br>
-            Seus lábios são aparelhos <br>
-            Deixe que Deus interprete.
-        </p>
     </section>
 
 <footer>
