--- a/youtube.html
+++ b/youtube.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="YouTube">
-    <a href="youtube.com" target="_blank">ACESSE</a>
+    <a href="index3.html" target="_blank">ACESSE</a>
 </body>
 </html>
